force-app/main/default/objects/Expenditure_Line_Items__c/Expenditure_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Expenditure Line Items</label>
    <nameField>
        <displayFormat>EXPL-{0}</displayFormat>
        <label>Expenditure Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditure Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>