force-app/main/default/objects/Expenditure_Line_Items__c/fields/Balance_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Balance_Carry_Forward__c</fullName>
    <formula>Budget__c -  Total_Year_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Carry Forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>