force-app/main/default/objects/Expenditure_Line_Items__c/fields/Expenditure_Report__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expenditure Report</label>
    <referenceTo>Expenditure_Report__c</referenceTo>
    <relationshipLabel>Expenditure Line Items</relationshipLabel>
    <relationshipName>Expenditure_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>