force-app/main/default/objects/Expenditure_Line_Items__c/fields/ReportingCycle1__c.field-meta.xml
<CustomField>
    <fullName>ReportingCycle1__c</fullName>
    <label>Reporting Cycle 1</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>