force-app/main/default/objects/Expenditure_Line_Items__c/fields/ReportingCycle2__c.field-meta.xml
<CustomField>
    <fullName>ReportingCycle2__c</fullName>
    <label>Reporting Cycle 2</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>