force-app/main/default/objects/Expenditure_Line_Items__c/fields/ReportingCycle3__c.field-meta.xml
<CustomField>
    <fullName>ReportingCycle3__c</fullName>
    <label>Reporting Cycle 3</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>