force-app/main/default/objects/Expenditure_Line_Items__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>