force-app/main/default/objects/Expenditure_Line_Items__c/fields/Total_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenditures__c</fullName>
    <label>Total Expenditures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>