force-app/main/default/objects/Expenditure_Line_Items__c/fields/Total_Year_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_Expenditure__c</fullName>
    <formula>ReportingCycle1__c +  ReportingCycle2__c +  ReportingCycle3__c +  ReportingCycle4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Year Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>